--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
-<meta name = "keywords" content = "JavaScript,Showdown,Markdown,GitHub,FOSS" >
-<meta name = "date" content = "2018-01-17" >
-<title>pushMe pullYou / Table of Contents</title>
+<meta name = "description" content = "This script allows you to list, open view all the files in all the Spider folders" >
+<meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
+<meta name = "date" content = "2018-02-01" >
+<title>pushme-pullyou 12</title>
 
 <style>
-/* Copyright 2018 pushMe pullYou authors. MIT License */
+/* Copyright 2018 Ladybug Tools authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -33,7 +33,7 @@
 	td { vertical-align: top; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
-	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
+	#divContents { height: 100%; left: 0; margin: 0 auto; right: 0;}
 
 	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0; height: 100%;
 		overflow-x: hidden; padding: 30px 10px 0 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
@@ -48,15 +48,17 @@
 
 
 	<div id = "divMenu" >
-<!--
+
 		<p>
-			<a href="http://pushme-pullyou.github.io/" target="_top" >Ladybug Tools</a> &raquo;
+<!--
+			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo;
 			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
-		</p>
 -->
+		</p>
+
 		<h2>
-			<a id = "urlInfo" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' ></a>
+			<a id="urlInfo" target="_top" >info</a>
 			<a href="" ><script> document.write( document.title )</script></a>
 		</h2>
 
@@ -74,19 +76,19 @@
 
 		<p>Tooltips provide file size.</p>
 
+		<hr>
+
 		<div id= "divFooter" >
 
-			<hr>
-
-			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-			<div><a href=#../../pages/code-of-conduct.md >Code of Conduct</a></div>
-			<div><a href=#../../pages/contributing.md >Contributing</a></div>
-			<div><a href=#../../pages/license.md >License</a></div>
-			<div><a href=#../../pages/markdown-help.md >Markdown Help</a></div>
+			<div title='many thanks!' ><a href=#pages/credits.md >Credits</a></div>
+			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#pages/contributing.md >Contributing</a></div>
+			<div><a href=#pages/license.md >License</a></div>
+			<div><a href=#pages/markdown-help.md >Markdown Help</a></div>
 			<div><a href="javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
 			<div><a href="https://api.github.com/rate_limit" target="_blank" title="Occasionaly this script breaks if you go over the GitHub API rate limit" >github rate limits</a></div>
 
-			<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top' > &#x2766; </h1>
+			<p onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top and, btw, my web is better than your web' >&#x1f578;</p>
 
 		</div>
 
@@ -99,7 +101,7 @@
 
 	</div>
 
-	<div id = "hamburger" onclick=toggleNav(); > slide &#9776;  </div>
+	<div id = "hamburger" onclick=toggleNav(); > slide &#9776; </div>
 
 <script>
 
@@ -108,6 +110,7 @@
 	const pathRepo = '';
 
 	const uriDefaultFile = 'README.md';
+//	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
@@ -116,21 +119,19 @@
 	let urlGitHubPage;
 
 	const urlGitHubSource = 'https://github.com/' + user + repo;
-//	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
 
 
 	init();
 
 	function init() {
 
-		urlGitHubPage = location.host.startsWith( user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
+		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
+		urlInfo.innerHTML = iconInfo;
 
 		window.addEventListener ( 'hashchange', onHashChange, false );
-
-		requestFile( urlGitHubApiContents, callbackGitHubMenu );
 
 		onHashChange();
 
@@ -140,34 +141,30 @@
 
 	function onHashChange() {
 
-		let url, ulc;
+		let url, ulc, pathCurrent;
 
 		if ( !location.hash ) {
 
 			url = urlGitHubPage + uriDefaultFile;
 			ulc = url.toLowerCase();
+			pathCurrent = '';
 
 		} else {
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
-
 //console.log( 'url', url );
 
-//https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
+			const crumbs = url.slice( urlGitHubPage.length );
+			pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-			start = ( 'https://rawgit.com/' + user + repo +'/master/' ).length;
-
-			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( start );
-			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
-
-//console.log( 'crumbs2',  crumbs2 );
-
-			setBreadcrumbs( crumbs2 );
-
-			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
+//console.log( 'pathCurrent',  pathCurrent );
 
 		}
+
+
+
+		getFolderContents( pathCurrent );
 
 		if ( ulc.endsWith( '.md' ) ) {
 
@@ -175,9 +172,8 @@
 
 		} else if ( ulc.endsWith( '.html' ) ) {
 
-// needs revisiting so 'view-github-issues' scrolls more nicely
-
 			document.body.style.overflow = 'hidden';
+			divContents.style.maxWidth = '';
 			divContents.innerHTML = '<iframe src=' + url + ' style=border:none;height:100%;width100%; ></iframe>';
 
 		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' ) || ulc.endsWith( '.ico' ) ) {
@@ -234,6 +230,7 @@
 	}
 
 
+
 	function callbackGitHubMenu( xhr ) {
 
 		const response = xhr.target.response;
@@ -242,7 +239,7 @@
 
 		let txt = '';
 
-	if ( items.message ) { alert( items.message ); return; }
+		if ( items.message ) { alert( items.message ); return; }
 
 		const ignoreFolders = [ 'data' ]; //, 'plugins'
 
@@ -264,7 +261,7 @@
 
 		}
 
-		const ignoreFiles = [ '.gitattributes', '.gitignore' ];
+		const ignoreFiles = [ '.gitattributes', '.gitignore', '404', 'ladybug-tools-spider.html' ];
 
 		for ( let item of items ) {
 
@@ -280,24 +277,18 @@
 						'<td><a href="' + urlGitHubSource + '/blob/master/' + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
 						'<td>' +
 
-// choose to access remote or local files
 							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
-//							'<a href=#' + itemPath +
-
 							' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
-// choose to access remote or local files
 							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
-//							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
 
 						'</td>' +
 
 					'</tr></table>';
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-						&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
+					&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
-//					location.hash = itemPath;
 
 				}
 
@@ -313,12 +304,13 @@
 
 	function callbackMarkdown( xhr ){
 
+		showdown.setFlavor('github');
 		const converter = new showdown.Converter();
 		const response = xhr.target.response;
 		const html = converter.makeHtml( xhr.target.responseText );
 
-		divContents.style.maxWidth = '800px';
 		document.body.style.overflow = '';
+		divContents.style.maxWidth = '800px';
 		divContents.innerHTML = html;
 		window.scrollTo( 0, 0 );
 
@@ -352,21 +344,17 @@
 
 	function toggleNav() {
 
-		const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' );
+		const left = 'calc( var( --mnu-width ) - 100px )';
 
-		if ( !divMenu.style.width || divMenu.style.width === width ) {
+		if ( hamburger.style.left === '' || hamburger.style.left === left ) {
 
-			divMenu.style.width = '0';
-			divMenu.style.padding = '0';
+			divMenu.style.left = 'calc( -1 * var( --mnu-width ) - 20px )';
 			hamburger.style.left = '-100px';
-			divContainer.style.marginLeft = '0';
 
-		} else {
+			} else {
 
-			divMenu.style.width = width;
-			divMenu.style.padding = '30px 10px 0 10px';
-			hamburger.style.left = 'calc( var( --mnu-width ) - 100px )';
-			divContainer.style.marginLeft = width;
+				divMenu.style.left = 0;
+				hamburger.style.left = left;
 
 		}
 
