--- a/tootoo12/prediqtiv-alpha-vantage/prediqtiv-alpha-vantage-2018-02-01.html
+++ b/tootoo12/prediqtiv-alpha-vantage/prediqtiv-alpha-vantage-2018-02-01.html
@@ -33,7 +33,7 @@
 	td { vertical-align: top; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
-	#divContents { height: 100%; left: 0; margin: 0 auto; right: 0;}
+	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
 
 	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0; height: 100%;
 		overflow-x: hidden; padding: 30px 10px 0 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
@@ -58,7 +58,7 @@
 		</p>
 
 		<h2>
-			<a id="urlInfo" target="_top" >info</a>
+			<a id = "urlInfo" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat'  ></a>
 			<a href="" ><script> document.write( document.title )</script></a>
 		</h2>
 
@@ -76,9 +76,9 @@
 
 		<p>Tooltips provide file size.</p>
 
-		<hr>
-
 		<div id= "divFooter" >
+
+			<hr>
 
 			<div title='many thanks!' ><a href=#pages/credits.md >Credits</a></div>
 			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
@@ -101,11 +101,12 @@
 
 	</div>
 
-	<div id = "hamburger" onclick=toggleNav(); > slide &#9776; </div>
+
+	<div id = "hamburger" onclick=toggleNav(); > slide &#9776;  </div>
 
 <script>
 
-	const user = 'prediqtiv';
+	const user = 'predIQtiv'
 	const repo = '/alpha-vantage-cookbook';
 	const pathRepo = '';
 
@@ -119,19 +120,21 @@
 	let urlGitHubPage;
 
 	const urlGitHubSource = 'https://github.com/' + user + repo;
+//	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
 
 
 	init();
 
 	function init() {
 
-		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
+		urlGitHubPage = location.host.startsWith( user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
-		urlInfo.innerHTML = iconInfo;
 
 		window.addEventListener ( 'hashchange', onHashChange, false );
+
+		requestFile( urlGitHubApiContents, callbackGitHubMenu );
 
 		onHashChange();
 
@@ -141,30 +144,34 @@
 
 	function onHashChange() {
 
-		let url, ulc, pathCurrent;
+		let url, ulc;
 
 		if ( !location.hash ) {
 
 			url = urlGitHubPage + uriDefaultFile;
 			ulc = url.toLowerCase();
-			pathCurrent = '';
 
 		} else {
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
+
 //console.log( 'url', url );
 
-			const crumbs = url.slice( urlGitHubPage.length );
-			pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
+//https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
 
-//console.log( 'pathCurrent',  pathCurrent );
+			start = ( 'https://rawgit.com/' + user + repo +'/master/' ).length;
+
+			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( start );
+			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
+
+//console.log( 'crumbs2',  crumbs2 );
+
+			setBreadcrumbs( crumbs2 );
+
+			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
 
 		}
-
-
-
-		getFolderContents( pathCurrent );
 
 		if ( ulc.endsWith( '.md' ) ) {
 
@@ -172,8 +179,9 @@
 
 		} else if ( ulc.endsWith( '.html' ) ) {
 
+// needs revisiting so 'view-github-issues' scrolls more nicely
+
 			document.body.style.overflow = 'hidden';
-			divContents.style.maxWidth = '';
 			divContents.innerHTML = '<iframe src=' + url + ' style=border:none;height:100%;width100%; ></iframe>';
 
 		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' ) || ulc.endsWith( '.ico' ) ) {
@@ -277,18 +285,24 @@
 						'<td><a href="' + urlGitHubSource + '/blob/master/' + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
 						'<td>' +
 
+// choose to access remote or local files
 							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
+//							'<a href=#' + itemPath +
+
 							' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
+// choose to access remote or local files
 							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
+//							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
 
 						'</td>' +
 
 					'</tr></table>';
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-					&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
+						&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
+//					location.hash = itemPath;
 
 				}
 
@@ -344,17 +358,21 @@
 
 	function toggleNav() {
 
-		const left = 'calc( var( --mnu-width ) - 100px )';
+		const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' );
 
-		if ( hamburger.style.left === '' || hamburger.style.left === left ) {
+		if ( !divMenu.style.width || divMenu.style.width === width ) {
 
-			divMenu.style.left = 'calc( -1 * var( --mnu-width ) - 20px )';
+			divMenu.style.width = '0';
+			divMenu.style.padding = '0';
 			hamburger.style.left = '-100px';
+			divContainer.style.marginLeft = '0';
 
-			} else {
+		} else {
 
-				divMenu.style.left = 0;
-				hamburger.style.left = left;
+			divMenu.style.width = width;
+			divMenu.style.padding = '30px 10px 0 10px';
+			hamburger.style.left = 'calc( var( --mnu-width ) - 100px )';
+			divContainer.style.marginLeft = width;
 
 		}
 
