--- a/tootoo-templates/hamburger-markdown-html-swipe.html
+++ b/tootoo-templates/hamburger-markdown-html-swipe.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="basic html template with sliding menu, markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-06-23" >
+<meta name = "date" content = "2018-07-02" >
 <title>basic-hamburger-markdown-html</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -49,16 +49,14 @@
 
 	<div id = "divMenu" >
 
-		<!--	<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a> -->
 		<div id = "divTitle" ></div>
 
 		<div id = "divMenuItems" >
-
 			<p><a href="#../plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
+
 			<p><a href="#../plugins/view-github-issues.html" >view-github-issues.html</a></p>
 
 			<p><a href="#../tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
-
 		</div>
 
 
@@ -89,196 +87,205 @@
 	<div id = "hamburger" onclick=toggleNav(); > slide &#9776;  </div>
 
 <script>
-	// https://github.com/showdownjs/showdown << check for latest rev from time to time
-	// jshint esversion: 6
+// https://github.com/showdownjs/showdown << check for latest rev from time to time 1.8.6 2018-07-02
+// jshint esversion: 6
 
 
-	let xDown = null;
-	let yDown = null;
+let xDown = null;
+let yDown = null;
 
-	//	let defaultFile = 'index.html';
-	//	location.hash = '../README.md';
-	let uriDefaultFile = 'README.md';
-	const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
+//	let defaultFile = 'index.html';
+//	location.hash = '../README.md';
+let uriDefaultFile = 'README.md';
 
-
-
-	init();
+const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
 
 
-	function init() {
 
-		divTitle.innerHTML =
-			'<h2><a href = "" >' + document.title + '</a></h2>' +
-			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
-		'';
+init();
 
-		divMenuItems.innerHTML += txt + txt;
 
-		document.addEventListener( 'touchstart', onTouchStart, false );
-		document.addEventListener( 'touchmove', onTouchMove, false );
+function init() {
 
-		window.addEventListener ( 'hashchange', onHashChange, false );
+	divTitle.innerHTML =
+	`
+		<div>
+			<a href = "../index.html" target="_top" >repo</a> &raquo;
+			<a href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a> &raquo;
+		</div>
+		<h2>
+			<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href = "" >${ document.title }</a>
+		</h2>
+		<p>${ document.head.querySelector( '[name=description]' ).content }</p>
+	`;
 
-		onHashChange();
+	divMenuItems.innerHTML += txt + txt;
+
+	document.addEventListener( 'touchstart', onTouchStart, false );
+	document.addEventListener( 'touchmove', onTouchMove, false );
+
+	window.addEventListener ( 'hashchange', onHashChange, false );
+
+	onHashChange();
+
+}
+
+
+
+function onHashChange() {
+
+	const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
+	const ulc = url.toLowerCase();
+
+	if ( ulc.endsWith( '.md' ) ) {
+
+		requestFile( url, callbackMarkdown );
+
+	} else if ( ulc.endsWith( '.html' ) ) {
+
+		divContents.style.maxWidth = '100%';
+		document.body.style.overflow = 'hidden';
+
+		divContents.innerHTML = '<iframe src=' + url + ' height=100% width=100% ></iframe>';
+
+	} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
+
+		divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' >';
+
+	} else {
+
+		requestFile( urlGitHubPage + url, callbackToTextarea );
 
 	}
 
+}
 
 
-	function onHashChange() {
 
-		const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
-		const ulc = url.toLowerCase();
+function callbackMarkdown( xhr ){
 
-		if ( ulc.endsWith( '.md' ) ) {
+	showdown.setFlavor('github');
+	const converter = new showdown.Converter();
+	const response = xhr.target.response;
+	const html = converter.makeHtml( response );
 
-			requestFile( url, callbackMarkdown );
+	divContents.style.maxWidth = '800px';
+	document.body.overflow = '';
+	divContents.innerHTML = html;
+	window.scrollTo( 0, 0 );
 
-		} else if ( ulc.endsWith( '.html' ) ) {
+}
 
-			divContents.style.maxWidth = '100%';
-			document.body.style.overflow = 'hidden';
 
-			divContents.innerHTML = '<iframe src=' + url + ' height=100% width=100% ></iframe>';
 
-		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
+function callbackToTextarea( xhr ){
 
-			divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' >';
+	const response = xhr.target.response;
+
+	divContents.innerHTML = '<textarea style=height:100%;width:100%; >' + response + '</textarea>';
+
+}
+
+
+
+function requestFile( url, callback ) {
+
+	const xhr = new XMLHttpRequest();
+	xhr.crossOrigin = 'anonymous';
+	xhr.open( 'GET', url, true );
+	xhr.onerror = function( xhr ) { console.log( 'error:', xhr  ); };
+	//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
+	xhr.onload = callback;
+	xhr.send( null );
+
+}
+
+
+
+
+function onTouchStart( event ) {
+
+	xDown = event.touches[ 0 ].clientX;
+	yDown = event.touches[ 0 ].clientY;
+
+}
+
+
+function onTouchMove(event) {
+
+	if ( ! xDown || ! yDown ) {
+
+		return;
+
+	}
+
+	const xUp = event.touches[ 0 ].clientX;
+	const yUp = event.touches[ 0 ].clientY;
+
+	const xDiff = xDown - xUp;
+	const yDiff = yDown - yUp;
+
+	if ( Math.abs( xDiff ) > Math.abs( yDiff ) ) {// most significant
+
+		if ( xDiff > 0 ) {
+
+			toggleNav();
+			// left swipe
+			console.log( 'left swipe' );
 
 		} else {
 
-			requestFile( urlGitHubPage + url, callbackToTextarea );
+			toggleNav();
+			// right swipe
+			console.log( 'right swipe' );
 
 		}
 
-	}
+	} else {
 
+		if ( yDiff > 0 ) {
 
-
-	function callbackMarkdown( xhr ){
-
-		showdown.setFlavor('github');
-		const converter = new showdown.Converter();
-		const response = xhr.target.response;
-		const html = converter.makeHtml( response );
-
-		divContents.style.maxWidth = '800px';
-		document.body.overflow = '';
-		divContents.innerHTML = html;
-		window.scrollTo( 0, 0 );
-
-	}
-
-
-
-	function callbackToTextarea( xhr ){
-
-		const response = xhr.target.response;
-
-		divContents.innerHTML = '<textarea style=height:100%;width:100%; >' + response + '</textarea>';
-
-	}
-
-
-
-	function requestFile( url, callback ) {
-
-		const xhr = new XMLHttpRequest();
-		xhr.crossOrigin = 'anonymous';
-		xhr.open( 'GET', url, true );
-		xhr.onerror = function( xhr ) { console.log( 'error:', xhr  ); };
-		//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
-		xhr.onload = callback;
-		xhr.send( null );
-
-	}
-
-
-
-
-	function onTouchStart( event ) {
-
-		xDown = event.touches[ 0 ].clientX;
-		yDown = event.touches[ 0 ].clientY;
-
-	}
-
-
-	function onTouchMove(event) {
-
-		if ( ! xDown || ! yDown ) {
-
-			return;
-
-		}
-
-		const xUp = event.touches[ 0 ].clientX;
-		const yUp = event.touches[ 0 ].clientY;
-
-		const xDiff = xDown - xUp;
-		const yDiff = yDown - yUp;
-
-		if ( Math.abs( xDiff ) > Math.abs( yDiff ) ) {// most significant
-
-			if ( xDiff > 0 ) {
-
-				toggleNav();
-				// left swipe
-				console.log( 'left swipe' );
-
-			} else {
-
-				toggleNav();
-				// right swipe
-				console.log( 'right swipe' );
-
-			}
+			//up swipe
+			console.log( 'up swipe' );
 
 		} else {
 
-			if ( yDiff > 0 ) {
-
-				//up swipe
-				console.log( 'up swipe' );
-
-			} else {
-
-				// down swipe
-				console.log( 'down swipe' );
-
-			}
-
-		}
-
-		xDown = null;
-		yDown = null;
-
-	}
-
-
-
-	function toggleNav() {
-
-		const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' );
-
-		if ( !divMenu.style.width || divMenu.style.width === width ) {
-
-			divMenu.style.width = '0';
-			divMenu.style.padding = '0';
-			hamburger.style.left = '-75px';
-			divContainer.style.marginLeft = '0';
-
-		} else {
-
-			divMenu.style.width = width;
-			divMenu.style.padding = '30px 10px 0 10px';
-			hamburger.style.left = 'calc( var( --mnu-width ) - 100px )';
-			divContainer.style.marginLeft = width;
+			// down swipe
+			console.log( 'down swipe' );
 
 		}
 
 	}
+
+	xDown = null;
+	yDown = null;
+
+}
+
+
+
+function toggleNav() {
+
+	const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' );
+
+	if ( !divMenu.style.width || divMenu.style.width === width ) {
+
+		divMenu.style.width = '0';
+		divMenu.style.padding = '0';
+		hamburger.style.left = '-75px';
+		divContainer.style.marginLeft = '0';
+
+	} else {
+
+		divMenu.style.width = width;
+		divMenu.style.padding = '30px 10px 0 10px';
+		hamburger.style.left = 'calc( var( --mnu-width ) - 100px )';
+		divContainer.style.marginLeft = width;
+
+	}
+
+}
 
 
 </script>
